2008-03-04  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (arm_ext_barrier, arm_ext_msr): New.
	(arm_ext_v7m): Rename...
	(arm_ext_m): ... to this.  Include v6-M.
	(do_t_add_sub): Allow narrow low-reg non flag setting adds.
	(do_t_mrs, do_t_msr, aeabi_set_public_attributes): Use arm_ext_m.
	(md_assemble): Allow wide msr instructions.
	(insns): Add classifications for v6-m instructions.
	(arm_cpu_option_table): Add cortex-m1.
	(arm_arch_option_table): Add armv6-m.
	(cpu_arch): Add ARM_ARCH_V6M.  Fix numbering of other v6 variants.

2008-03-03  Sterling Augustine  <sterling@tensilica.com>
	    Bob Wilson  <bob.wilson@acm.org>
	
	* config/tc-xtensa.c (xtensa_num_pipe_stages): New.
	(md_begin): Initialize it.
	(resources_conflict): Use it.
	
2008-03-03  Sterling Augustine  <sterling@tensilica.com>
	
	* config/tc-xtensa.h (RELAX_XTENSA_NONE): New.
	
2008-03-03  Denys Vlasenko <vda.linux@googlemail.com>
	    H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/5543
	* read.c (pseudo_set): Don't allow global register symbol.

	* symbols.c (S_SET_EXTERNAL): Don't allow register symbol
	global.

2008-03-03  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/5543
	* write.c (write_object_file): Don't allow symbols which were
	equated to register.  Stop if there is an error.

2008-03-01  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.h (struct _ppc_fix_extra): New.
	(ppc_cpu): Declare.
	(TC_FIX_TYPE, TC_INIT_FIX_DATA): Define.
	* config/tc-ppc.c (ppu_cpu): Make global.
	(ppc_insert_operand): Add ppu_cpu parameter.
	(md_assemble): Adjust for above change.
	(md_apply_fix): Pass tc_fix_data.ppc_cpu to ppc_insert_operand.

2008-02-22  Nick Clifton  <nickc@redhat.com>

	* config/tc-arm.c (do_bx): Only test EF_ARM_EABI_VERSION on ELF
	targeted ARM ports, otherwise just skip generating the reloc.

2008-02-18  H.J. Lu  <hongjiu.lu@intel.com>

	* doc/c-i386.texi: Update -march= and .arch.

2008-02-18  Nick Clifton  <nickc@redhat.com>
