@@ -1,3 +1,8 @@
+2008-03-07  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/tc-ppc.c (ppc_setup_opcodes): Tidy.  Add code to test
+	for strict ordering of powerpc_opcodes, but disable for now.
+
 2008-03-04  Paul Brook  <paul@codesourcery.com>
 
 	* config/tc-arm.c (arm_ext_barrier, arm_ext_msr): New.
